[tool.poetry]
name = "langgrpah-complete-flow"
version = "0.1.0"
description = ""
authors = ["quyld3 <quyld3@fpt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^25.5.0"
dotenv = "^0.9.9"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
langchain = "^1.0.2"
langchain-google-genai = "^3.0.0"
asgiref = "^3.10.0"
langfuse = "^3.8.1"
psycopg-pool = "^3.2.7"
langchain-tavily = "^0.2.12"
jose = "^1.0.0"
jwt = "^1.4.0"
sqlalchemy = "^2.0.44"
pymilvus = "^2.6.2"
starlette = "^0.48.0"
sqlmodel = "^0.0.27"
fastapi = "^0.120.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
